--- a/configs/drays_study/config_compareMC_SnPhi.yml
+++ b/configs/drays_study/config_compareMC_SnPhi.yml
@@ -1,24 +1,24 @@
 inputs:
     dirname: null # leave null if not common for all input files
-    filenames: [clusITSAngles_Thr0_10.root, clusITSAngles_Thr0_10.root, clusITSAngles_Thr10_50.root,clusITSAngles_Thr50_1000000000.root]
-    objectnames: [hClSnPhiVsLayerAllL3, hClSnPhiVsLayerL3, hClSnPhiVsLayerL3, hClSnPhiVsLayerL3] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
+    filenames: [ClusITSAngles_Cl0_10_MC_p0_0.2.root, ClusITSAngles_Cl10_50_MC_p0_0.2.root]
+    objectnames: [hSnPhiL3, hSnPhiL3, hSnPhiL3, hSnPhiL3, hSnPhiL3] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
 
 output: 
-    filename: SnPhiL3Comparison # with path and w/o extension
+    filename: MC_SnPhiL3Comparison_pcut # with path and w/o extension
     extensions: [png, root] # possibilities: pdf, eps, png, root
 
 options:
     ROOTobject: [TH1, TH1, TH1, TH1, TH1, TH1, TH1, TH1, TH1] # TH1 or TGraph: no need to specify TH1F, TH1D or TGraphErrors, TGraphAsymmErrors
-    scale: [1., 1., 1., 3.e-1, 1., 1., 1., 1., 1.]
-    rebin: [1, 1, 1, 4]
-    normalize: [true, true, true, true, false, false, false, false, false] # divide histogram by its area
-    colors: [kBlack,  kAzure+4, kOrange+7, kRed+1, kMagenta+1, kBlue, kCyan+3, kSpring-5]
+    scale: [1., 1., 1., 1, 1., 1., 1., 1., 1.]
+    rebin: [1, 1, 1, 1, 1]
+    normalize: [true, true, true, true, true, false, false, false, false] # divide histogram by its area
+    colors: [kBlue-8, kAzure+4, kBlack, kRed+1, kMagenta+1, kBlue, kCyan+3, kSpring-5]
     markers: [kFullCircle, kFullSquare, kFullCross, kFullDiamond, kFullCircle, kFullCircle, kFullCircle, kFullCircle, kFullCircle]
     markersize: 1.5
     linewidth: 1
-    fillstyle: [0,0,0,0]
-    fillalpha: [1,1,1,1]
-    drawopt: [e, e, e, e]
+    fillstyle: [0,0,0,0,0]
+    fillalpha: [1,1,1,1,1]
+    drawopt: [e, e, e, e, e]
     
     ratio: 
         enable: false
@@ -37,7 +37,8 @@ options:
         avoid: false #set true to avoid the legend in the final plot
         xlimits: [0.2, 0.4]
         ylimits: [0.7, 0.9]
-        titles: [All, Cl size < 10, 10 < Cl size < 50, Cl size > 50, narrow left and right, wide left, wide right, wide left and right, alt step 1, alt step 2]
+        header: '0 < #it{p} < 0.2'
+        titles: [Cl size < 10, 10 < Cl size < 50, Cl size > 50, Cl size < 10 - TPC, wide left, wide right, wide left and right, alt step 1, alt step 2]
         options: [lp, lp, lp, lp, lp, lp, lp, lp, lp]
         textsize: 0.045
         ncolumns: 1
@@ -48,7 +49,7 @@ options:
         xaxistitle: 'Sin(#phi) L3'
         yaxistitle: 'Norm. entries'
         xlimits: [-1.0, 1.0]
-        ylimits: [0.00001, 1.]
+        ylimits: [1.e-6, 2.5]
         ylimitsratio: [0., 2.]
         ylimitserr: [0., 0.35]
         logy: true
