--- a/configs/drays_study/config_compare_ClSize_MCFullProdwDraysCut_MCNewLocalProdwoDrayCut_DataOct.yml
+++ b/configs/drays_study/config_compare_ClSize_MCFullProdwDraysCut_MCNewLocalProdwoDrayCut_DataOct.yml
@@ -1,12 +1,15 @@
 inputs:
     dirname: null # leave null if not common for all input files
-    filenames: [/home/spolitan/Analyses/ITS_Cluster_Studies/py/MCOriginStudy181122_EkinFix_rerun.root,
-                /home/spolitan/Analyses/ITS_Cluster_Studies/py/MCOriginStudyOldMC_check.root,
-                /home/spolitan/Analyses/ITS_Cluster_Studies/JUNE/517689/raw/0840/outFileClSizeJuneNewMaskData.root
+    filenames: [/home/spolitan/Analyses/ITS_Cluster_Studies/JUNE/517689/raw/0840/outFileClSizeJuneNewMaskData.root,
+                /home/spolitan/Analyses/ITS_Cluster_Studies/py/MCOriginStudyFracDraysNewCut_globalMC_281122.root,
+                #/home/spolitan/Analyses/ITS_Cluster_Studies/py/MCOriginStudyOldMC_check.root,
+                
                 ]
-    objectnames: [hCLsize,
-                  hCLsize,
-                  hClSizehOct] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
+    objectnames: [
+                  #hCLsize,
+                  hClSizehOct,
+                  CLsize/hCLsize,
+                  ] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
 # All: hCLsize,  hClSizehOct 
 output: 
     filename: CompClSizeAll_MCFullProdwDraysCut_MCNewLocalProdwoDrayCut_DataOct # with path and w/o extension
@@ -18,8 +21,8 @@ options:
     rebin: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
     normalize: [true, true, true, true, true, true, true, true, true, true, false, false, false, false] # divide histogram by its area
     normrange: [3, 99]
-    colors: [ kRed+1,
-              kAzure+4, 
+    colors: [ kAzure+4,
+              kRed+1,
             kBlack]
     markers: [kOpenSquare, kOpenCircle, kFullSquare, kFullTriangleUp]
     markersize: 1.
@@ -27,10 +30,10 @@ options:
     linestyles: [1,1,8,8]
     fillstyle: [1,1,1,0,0,0,0,0,0]
     fillalpha: [0.2,0.2,0.2,0.2,1,1,1,1,1,1]
-    drawopt: [hist, hist, hist, hist, e, e, e, e, e]
+    drawopt: [histe, histe, hist, hist, e, e, e, e, e]
     
     ratio: 
-        enable: false
+        enable: true
         uncertainties:
             enable: false
             corr: false
@@ -38,7 +41,7 @@ options:
 
     errcomp: # comparison of uncertainties
         enable: false
-        relative: true
+        relative: false
     
     KS: false
     dottedLine: ''
@@ -48,27 +51,28 @@ options:
         xlimits: [0.3, 0.6]
         ylimits: [0.7, 0.9]
         header: 'Data-to-MC'
-        titles: [ 'MC Local prod. - w/o #delta-rays sel.',
-                  'MC Full prod. - w #delta-rays sel.',
-                  PB Oct. 2021 (505658)]
+        titles: [ #'MC Local prod. - w/o #delta-rays sel.',
+                  PB Oct. 2021 (505658),
+                 'MC Full prod. - w/o #delta-rays sel.',
+        ]
         options: [fl, fl, fl, l, lp, lp, lp, lp, lp]
         textsize: 0.045
         ncolumns: 1
 
     canvas:
-        width: 800
+        width: 1600
         heigth: 800
         xaxistitle: 'Cluster size'
         yaxistitle: 'Norm. counts'
         yaxistitleratio: ''
         xlimits: [0, 99]
         ylimits: [1.e-8, 10]
-        ylimitsratio: [0, 3]
+        ylimitsratio: [1.e-3, 1.e+2]
         ylimitserr: [0., 0.35]
         logy: true
         logx: false
         ratio:
-            logy: false
+            logy: true
             logx: false
         errcomp:
             logy: false
